@@ -1,7 +1,6 @@
 package nl.rijksoverheid.mev.brp.brpv;
 
 import nl.rijksoverheid.mev.brp.PersoonslijstFinder;
-import nl.rijksoverheid.mev.brp.brpv.generated.tables.Lo3Pl;
 import nl.rijksoverheid.mev.brp.brpv.generated.tables.Lo3PlGezagsverhouding;
 import nl.rijksoverheid.mev.brp.brpv.generated.tables.Lo3PlVerblijfplaats;
 import nl.rijksoverheid.mev.brp.brpv.generated.tables.records.Lo3PlGezagsverhoudingRecord;
@@ -11,7 +10,6 @@ import nl.rijksoverheid.mev.brp.brpv.generated.tables.records.Lo3PlVerblijfplaat
 import nl.rijksoverheid.mev.gezagsmodule.domain.Persoonslijst;
 import nl.rijksoverheid.mev.gezagsmodule.model.Burgerservicenummer;
 import org.jooq.DSLContext;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Repository;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -43,7 +41,6 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         this.create = create;
     }
 
-    @Cacheable("persoonslijsten")
     @Override
     public Optional<Persoonslijst> findPersoonslijst(Burgerservicenummer burgerservicenummer) {
         var plPersoonPersoon = findPlPersoonByPersoonTypeIsPersoonAndBurgerservicenummer(burgerservicenummer);
@@ -60,8 +57,7 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         var plId = plPersoonPersoonRecent.getPlId();
 
         var inschrijvingen = findInschrijvingen(plId);
-        inschrijvingen.stream()
-            .forEach(result::addInschrijving);
+        inschrijvingen.forEach(result::addInschrijving);
 
         var plPersoonByPersoonType = findPlPersoonByPersoonTypeNotPersoonAndPlId(plId);
 
@@ -104,7 +100,7 @@ public class JooqPersoonslijstFinder implements PersoonslijstFinder {
         return create.selectFrom(LO3_PL)
             .where(LO3_PL.PL_ID.equal(plId))
             .fetchStreamInto(Lo3PlRecord.class)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<Lo3PlPersoonRecord> findPlPersoonByPersoonTypeIsPersoonAndBurgerservicenummer(
